rusqlite/libsqlite3-sys/src/bindgen.rs

impl ::std::default::Default for sqlite3_index_constraint {
    fn default() -> Self { unsafe { ::std::mem::zeroed() } }
}
#[repr(C)]
#[derive(Copy, Clone)]
#[derive(Debug)]
pub struct sqlite3_index_orderby {
    pub iColumn: ::std::os::raw::c_int,
    pub desc: ::std::os::raw::c_uchar,
    _bindgen_padding_0_: [u8; 3usize],
}
impl ::std::default::Default for sqlite3_index_orderby {
    fn default() -> Self { unsafe { ::std::mem::zeroed() } }
}
#[repr(C)]
#[derive(Copy, Clone)]
#[derive(Debug)]
pub struct sqlite3_index_constraint_usage {
    pub argvIndex: ::std::os::raw::c_int,
    pub omit: ::std::os::raw::c_uchar,
    _bindgen_padding_0_: [u8; 3usize],
}
impl ::std::default::Default for sqlite3_index_constraint_usage {
    fn default() -> Self { unsafe { ::std::mem::zeroed() } }
}
#[repr(C)]
#[derive(Copy, Clone)]
#[derive(Debug)]
pub struct sqlite3_vtab {
    pub pModule: *const sqlite3_module,
    pub nRef: ::std::os::raw::c_int,
    pub zErrMsg: *mut ::std::os::raw::c_char,
}
impl ::std::default::Default for sqlite3_vtab {
    fn default() -> Self { unsafe { ::std::mem::zeroed() } }
}
#[repr(C)]
#[derive(Copy, Clone)]
#[derive(Debug)]
pub struct sqlite3_vtab_cursor {
    pub pVtab: *mut sqlite3_vtab,
}
impl ::std::default::Default for sqlite3_vtab_cursor {
    fn default() -> Self { unsafe { ::std::mem::zeroed() } }
}
pub enum sqlite3_blob { }
#[repr(C)]
#[derive(Copy, Clone)]
#[derive(Debug)]
pub struct sqlite3_mutex_methods {
    pub xMutexInit: ::std::option::Option<extern "C" fn()
                                              -> ::std::os::raw::c_int>,
    pub xMutexEnd: ::std::option::Option<extern "C" fn()
                                             -> ::std::os::raw::c_int>,
    pub xMutexAlloc: ::std::option::Option<extern "C" fn(arg1:
                                                             ::std::os::raw::c_int)
                                               -> *mut sqlite3_mutex>,
    pub xMutexFree: ::std::option::Option<unsafe extern "C" fn(arg1:
                                                                   *mut sqlite3_mutex)>,
    pub xMutexEnter: ::std::option::Option<unsafe extern "C" fn(arg1:
                                                                    *mut sqlite3_mutex)>,
    pub xMutexTry: ::std::option::Option<unsafe extern "C" fn(arg1:
                                                                  *mut sqlite3_mutex)
                                             -> ::std::os::raw::c_int>,
    pub xMutexLeave: ::std::option::Option<unsafe extern "C" fn(arg1:
                                                                    *mut sqlite3_mutex)>,
    pub xMutexHeld: ::std::option::Option<unsafe extern "C" fn(arg1:
                                                                   *mut sqlite3_mutex)
                                              -> ::std::os::raw::c_int>,
    pub xMutexNotheld: ::std::option::Option<unsafe extern "C" fn(arg1:
                                                                      *mut sqlite3_mutex)
                                                 -> ::std::os::raw::c_int>,
}
impl ::std::default::Default for sqlite3_mutex_methods {
    fn default() -> Self { unsafe { ::std::mem::zeroed() } }
}
pub enum sqlite3_pcache { }
#[repr(C)]
#[derive(Copy, Clone)]
#[derive(Debug)]
pub struct sqlite3_pcache_page {
    pub pBuf: *mut ::std::os::raw::c_void,
    pub pExtra: *mut ::std::os::raw::c_void,
}
impl ::std::default::Default for sqlite3_pcache_page {
    fn default() -> Self { unsafe { ::std::mem::zeroed() } }
}
#[repr(C)]
#[derive(Copy, Clone)]
#[derive(Debug)]
pub struct sqlite3_pcache_methods2 {
    pub iVersion: ::std::os::raw::c_int,
    pub pArg: *mut ::std::os::raw::c_void,
    pub xInit: ::std::option::Option<unsafe extern "C" fn(arg1:
                                                              *mut ::std::os::raw::c_void)
                                         -> ::std::os::raw::c_int>,
    pub xShutdown: ::std::option::Option<unsafe extern "C" fn(arg1:
                                                                  *mut ::std::os::raw::c_void)>,
    pub xCreate: ::std::option::Option<extern "C" fn(szPage:
                                                         ::std::os::raw::c_int,
                                                     szExtra:
                                                         ::std::os::raw::c_int,
                                                     bPurgeable:
                                                         ::std::os::raw::c_int)
                                           -> *mut sqlite3_pcache>,
    pub xCachesize: ::std::option::Option<unsafe extern "C" fn(arg1:
                                                                   *mut sqlite3_pcache,
                                                               nCachesize:
                                                                   ::std::os::raw::c_int)>,
    pub xPagecount: ::std::option::Option<unsafe extern "C" fn(arg1:
                                                                   *mut sqlite3_pcache)
                                              -> ::std::os::raw::c_int>,
    pub xFetch: ::std::option::Option<unsafe extern "C" fn(arg1:
                                                               *mut sqlite3_pcache,
                                                           key:
                                                               ::std::os::raw::c_uint,
                                                           createFlag:
                                                               ::std::os::raw::c_int)
                                          -> *mut sqlite3_pcache_page>,
    pub xUnpin: ::std::option::Option<unsafe extern "C" fn(arg1:
                                                               *mut sqlite3_pcache,
                                                           arg2:
                                                               *mut sqlite3_pcache_page,
                                                           discard:
                                                               ::std::os::raw::c_int)>,
    pub xRekey: ::std::option::Option<unsafe extern "C" fn(arg1:
                                                               *mut sqlite3_pcache,
                                                           arg2:
                                                               *mut sqlite3_pcache_page,
                                                           oldKey:
                                                               ::std::os::raw::c_uint,
                                                           newKey:
                                                               ::std::os::raw::c_uint)>,
    pub xTruncate: ::std::option::Option<unsafe extern "C" fn(arg1:
                                                                  *mut sqlite3_pcache,
                                                              iLimit:
                                                                  ::std::os::raw::c_uint)>,
    pub xDestroy: ::std::option::Option<unsafe extern "C" fn(arg1:
                                                                 *mut sqlite3_pcache)>,
    pub xShrink: ::std::option::Option<unsafe extern "C" fn(arg1:
                                                                *mut sqlite3_pcache)>,
}
impl ::std::default::Default for sqlite3_pcache_methods2 {
    fn default() -> Self { unsafe { ::std::mem::zeroed() } }
}
#[repr(C)]
#[derive(Copy, Clone)]
#[derive(Debug)]
pub struct sqlite3_pcache_methods {
    pub pArg: *mut ::std::os::raw::c_void,
    pub xInit: ::std::option::Option<unsafe extern "C" fn(arg1:
                                                              *mut ::std::os::raw::c_void)
                                         -> ::std::os::raw::c_int>,
    pub xShutdown: ::std::option::Option<unsafe extern "C" fn(arg1:
                                                                  *mut ::std::os::raw::c_void)>,
    pub xCreate: ::std::option::Option<extern "C" fn(szPage:
                                                         ::std::os::raw::c_int,
                                                     bPurgeable:
                                                         ::std::os::raw::c_int)
                                           -> *mut sqlite3_pcache>,
    pub xCachesize: ::std::option::Option<unsafe extern "C" fn(arg1:
                                                                   *mut sqlite3_pcache,
                                                               nCachesize:
                                                                   ::std::os::raw::c_int)>,
    pub xPagecount: ::std::option::Option<unsafe extern "C" fn(arg1:
                                                                   *mut sqlite3_pcache)
                                              -> ::std::os::raw::c_int>,
    pub xFetch: ::std::option::Option<unsafe extern "C" fn(arg1:
                                                               *mut sqlite3_pcache,
                                                           key:
                                                               ::std::os::raw::c_uint,
                                                           createFlag:
                                                               ::std::os::raw::c_int)
                                          -> *mut ::std::os::raw::c_void>,
    pub xUnpin: ::std::option::Option<unsafe extern "C" fn(arg1:
                                                               *mut sqlite3_pcache,
                                                           arg2:
                                                               *mut ::std::os::raw::c_void,
                                                           discard:
                                                               ::std::os::raw::c_int)>,
    pub xRekey: ::std::option::Option<unsafe extern "C" fn(arg1:
                                                               *mut sqlite3_pcache,
                                                           arg2:
                                                               *mut ::std::os::raw::c_void,
                                                           oldKey:
                                                               ::std::os::raw::c_uint,
                                                           newKey:
                                                               ::std::os::raw::c_uint)>,
    pub xTruncate: ::std::option::Option<unsafe extern "C" fn(arg1:
                                                                  *mut sqlite3_pcache,
                                                              iLimit:
                                                                  ::std::os::raw::c_uint)>,
    pub xDestroy: ::std::option::Option<unsafe extern "C" fn(arg1:
                                                                 *mut sqlite3_pcache)>,
}
impl ::std::default::Default for sqlite3_pcache_methods {
    fn default() -> Self { unsafe { ::std::mem::zeroed() } }
}
pub enum sqlite3_backup { }
pub enum sqlite3_snapshot { }
pub type sqlite3_rtree_dbl = f64;
#[repr(C)]
#[derive(Copy, Clone)]
#[derive(Debug)]
pub struct sqlite3_rtree_geometry {
    pub pContext: *mut ::std::os::raw::c_void,
    pub nParam: ::std::os::raw::c_int,
    pub aParam: *mut sqlite3_rtree_dbl,
    pub pUser: *mut ::std::os::raw::c_void,
    pub xDelUser: ::std::option::Option<unsafe extern "C" fn(arg1:
                                                                 *mut ::std::os::raw::c_void)>,
}
impl ::std::default::Default for sqlite3_rtree_geometry {
    fn default() -> Self { unsafe { ::std::mem::zeroed() } }
}
